Jenkins/namespace-jenkins.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: jenkins
  name: jenkins
